@@ -29,7 +29,17 @@ pkg_build_docs <- function(pkg_name, pkg_path, rver, libpath) {
                     })
 
   ns_path <- file.path(pkg_path, "NAMESPACE")
-  build_ns <- !file.exists(ns_path) || any(grepl("^# Generated by roxygen", readLines(ns_path, n = 1)))
+  if (file.exists(ns_path)) {
+    ns_lines <- trimws(readLines(ns_path))
+    ns_lines <- ns_lines[ns_lines != ""]
+    if (!any(grepl("^# Generated by roxygen", ns_lines[1]))) {
+      build_ns <- FALSE # not generated with roxygen
+    } else {
+      build_ns <- length(ns_lines[-1]) == 0 # do not rebuild if not empty: roxygen will do it
+    }
+  } else {
+    build_ns <- TRUE
+  }
 
   if (!build_ns && length(removed) != 0 && !any(unlist(removed))) {
     # documentation building is not required
@@ -75,7 +85,7 @@ get_package_desc_imports <- function(pkg_path) {
 
   desc_imports <- read.dcf(desc_file, fields = "Imports")[1, "Imports"]
   desc_imports <- unlist(strsplit(desc_imports, ","))
-  desc_imports <- gsub("^\\s*([a-zA-Z0-9]+).*$", "\\1", desc_imports)
+  desc_imports <- trimws(gsub("\\(.+\\)", "", desc_imports)) # remove ver spec ans ws
   desc_imports <- desc_imports[!is.na(desc_imports)]
   return(desc_imports)
 }
@@ -83,6 +93,8 @@ get_package_desc_imports <- function(pkg_path) {
 #'
 #' Checks if package imports declaration is consistent with namespace.
 #' If imports declared but not present in NAMESPACE it gets updated.
+#'
+#' Base packages are omitted from the check.
 #'
 #' Logs warning message describing all inconsistencies.
 #'
@@ -103,7 +115,10 @@ validate_package_imports <- function(pkg_name, pkg_path) {
   ns_imports <- ns_lines[grepl("^\\s*import[(]\\s*[a-zA-Z0-9]+\\s*[)]\\s*$", ns_lines)]
   ns_imports <- gsub("^\\s*import[()]\\s*([a-zA-Z0-9]+)\\s*[)]\\s*$", "\\1", ns_imports)
 
+  base_pkgs <- installed.packages(lib.loc = .Library, priority = "base")[, "Package"]
+
   desc_not_ns <- setdiff(desc_imports, ns_imports)
+  desc_not_ns <- setdiff(desc_not_ns, base_pkgs)
   if (length(desc_not_ns) > 0) {
     pkg_logwarn("Updating NAMESPACE file of %s package to contain %s",
                 pkg_name, paste(desc_not_ns, collapse = ", "))
@@ -112,6 +127,7 @@ validate_package_imports <- function(pkg_name, pkg_path) {
   }
 
   ns_not_desc <- setdiff(ns_imports, desc_imports)
+  ns_not_desc <- setdiff(ns_not_desc, base_pkgs)
   if (length(ns_not_desc) > 0) {
     pkg_logwarn("Imports present in NAMESPACE are not declared in DESCRIPTION of %s: %s",
                 pkg_name, paste(ns_not_desc, collapse = ", "))
